--- a/internal/services/hybridcompute/scripts/install_arc.sh.tmpl
+++ b/internal/services/hybridcompute/scripts/install_arc.sh.tmpl
@@ -1,11 +1,11 @@
 #!/bin/bash
 
 # Disable the Azure VM Guest Agent.
-current_hostname=$(hostname);
-sudo service walinuxagent stop;
-sudo waagent -deprovision -force;
-sudo rm -rf /var/lib/waagent;
-sudo hostnamectl set-hostname $current_hostname;
+current_hostname=$(hostname)
+sudo service walinuxagent stop
+sudo waagent -deprovision -force
+sudo rm -rf /var/lib/waagent
+sudo hostnamectl set-hostname $current_hostname
 
 # Block access to the Azure IMDS endpoint.
 sudo ufw --force enable
