--- a/internal/services/hybridcompute/scripts/install_arc.sh.tmpl
+++ b/internal/services/hybridcompute/scripts/install_arc.sh.tmpl
@@ -13,21 +13,48 @@ sudo ufw deny out from any to 169.254.169.254
 sudo ufw default allow incoming
 
 # Add the service principal application ID and secret here
-servicePrincipalClientId=${client_id};
-servicePrincipalSecret=${client_secret};
-export subscriptionId=${subscription_id};
-export resourceGroup=${resource_group_name};
-export tenantId=${tenant_id};
-export location=${location};
-export authType="principal";
-export correlationId=${uuid};
-export cloud="AzureCloud";
-output=$(wget https://aka.ms/azcmagent -O ~/install_linux_azcmagent.sh 2>&1);
-if [ $? != 0 ];
-then wget -qO- --method=PUT --body-data="{\"subscriptionId\":\"$subscriptionId\",\"resourceGroup\":\"$resourceGroup\",\"tenantId\":\"$tenantId\",\"location\":\"$location\",\"correlationId\":\"$correlationId\",\"authType\":\"$authType\",\"operation\":\"onboarding\",\"messageType\":\"DownloadScriptFailed\",\"message\":\"$output\"}" "https://gbl.his.arc.azure.com/log" &> /dev/null || true;
-fi;
-echo "$output";
-sudo chmod +x ~/install_linux_azcmagent.sh;
-cd ~;
-./install_linux_azcmagent.sh;
-sudo azcmagent connect --service-principal-id "$servicePrincipalClientId" --service-principal-secret "$servicePrincipalSecret" --resource-group "$resourceGroup" --tenant-id "$tenantId" --location "$location" --subscription-id "$subscriptionId" --cloud "$cloud" --correlation-id "$correlationId";
+servicePrincipalClientId="${client_id}"
+servicePrincipalSecret="${client_secret}"
+cloud="AzureCloud"
+tenantId="${tenant_id}"
+subscriptionId="${subscription_id}"
+resourceGroup="${resource_group_name}"
+location="${location}"
+authType="principal"
+correlationId="${uuid}"
+
+output=$(wget https://aka.ms/azcmagent -O ~/install_linux_azcmagent.sh 2>&1)
+
+if [ $? != 0 ]; then
+  read -d '' bodyData <<EOF
+  {
+    "operation": "onboarding",
+    "messageType": "DownloadScriptFailed",
+    "tenantId": "${tenantId}",
+    "subscriptionId": "${subscriptionId}",
+    "resourceGroup": "${resourceGroup}",
+    "location": "${location}",
+    "correlationId": "${correlationId}",
+    "authType": "${authType}",
+    "message": "${output}"
+  }
+EOF
+
+  wget -qO- --method=PUT --body-data="${bodyData}" "https://gbl.his.arc.azure.com/log" &> /dev/null || true
+fi
+
+echo "${output}"
+
+sudo chmod +x ~/install_linux_azcmagent.sh
+cd ~
+./install_linux_azcmagent.sh
+
+sudo azcmagent connect \
+  --service-principal-id "${servicePrincipalClientId}" \
+  --service-principal-secret "${servicePrincipalSecret}" \
+  --cloud "${cloud}" \
+  --tenant-id "${tenantId}" \
+  --subscription-id "${subscriptionId}" \
+  --resource-group "${resourceGroup}" \
+  --location "${location}" \
+  --correlation-id "${correlationId}"
